# ChainSense-AI

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  docker-compose.prod.yml  docker-compose.yml  sonar-project.properties
.github/workflows/: ci-cd.yml  security.yml
.zap/: rules.tsv
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/endpoints/: analytics.py  auth.py  health.py  inventory.py  products.py  shipments.py  suppliers.py
backend/app/core/: __init__.py  config.py  database.py  middleware.py  security.py
backend/app/models/: __init__.py  models.py
backend/app/schemas/: __init__.py  schemas.py
backend/tests/: conftest.py  test_api.py  test_auth.py
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md
frontend/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx
frontend/src/components/: Layout.tsx
frontend/src/pages/: AnalyticsPage.tsx  DashboardPage.tsx  InventoryPage.tsx  LoginPage.tsx  SettingsPage.tsx  ShipmentsPage.tsx  SuppliersPage.tsx
frontend/src/services/: api.ts
frontend/src/store/: authStore.ts
k8s/: backend-deployment.yaml  configmap.yaml  database.yaml  frontend-deployment.yaml  ingress.yaml  ml-service-deployment.yaml  namespace.yaml
ml-service/: Dockerfile  pyproject.toml  requirements.txt
ml-service/app/: __init__.py  main.py
ml-service/app/api/v1/: __init__.py
ml-service/app/api/v1/endpoints/: detect.py  models.py  optimize.py  predict.py
ml-service/app/core/: __init__.py  config.py
ml-service/app/models/: __init__.py  model_manager.py
ml-service/tests/: __init__.py  test_ml_endpoints.py
monitoring/: prometheus.yml
